--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -21,15 +21,15 @@
             {
                 if (status.SortOrder <= Model.Order.OrderStatus.SortOrder)
                 {
-                    <td style="text-align: center;"><span class="glyphicon glyphicon-ok-circle glyphicon-success"></span></td>
+                    <td style="text-align: center;"><h2 style="margin: 0;"><span class="glyphicon glyphicon-ok-circle glyphicon-success"></span></h2></td>
                 }
                 else if (status.SortOrder == Model.Order.OrderStatus.SortOrder + 1)
                 {
-                    <td style="text-align: center;"><span class="glyphicon glyphicon-download glyphicon-warning"></span></td>
+                    <td style="text-align: center;"><h2 style="margin: 0;"><span class="glyphicon glyphicon-download glyphicon-warning"></span></h2></td>
                 }
                 else
                 {
-                    <td style="text-align: center;"><span class="glyphicon glyphicon-ban-circle glyphicon-default"></span></td>
+                    <td style="text-align: center;"><h2 style="margin: 0;"><span class="glyphicon glyphicon-ban-circle glyphicon-default"></span></h2></td>
                 }
             }
         </tr>
