--- a/Thermory.Web/Views/Shared/Order/_OutstandingSalesOrders.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_OutstandingSalesOrders.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     var id = Guid.NewGuid();
 }
-<div id="@id" class="orderSummary">
+<div id="@id" class="orderSummary" style="padding-bottom: .8em;">
     Loading order summary...
 </div>
 <script type="text/javascript">
