--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -126,7 +126,7 @@
         }
         <li><a href="#orderTransactions" data-toggle="tab">Transactions</a></li>
     </ul>
-    <div class="tab-content">
+    <div class="tab-content" style="height: 400px; overflow-y: scroll;">
         <div id="orderDetails" class="tab-pane active" style="padding-bottom: 10px;">
             @if (!string.IsNullOrEmpty(Model.Order.Notes))
             {
