--- a/Thermory.Web/Views/Inventory/Index.cshtml
+++ b/Thermory.Web/Views/Inventory/Index.cshtml
@@ -16,7 +16,7 @@
         }
 }
 </ul>
-<div class="tab-content" style="padding: 0">
+<div class="tab-content" style="padding: 0; height: 500px; overflow-y: scroll;">
     @{
         foreach (var category in Model.LumberCategories)
         {
