--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -52,7 +52,7 @@
         }
         if (User.IsInRole(Role.InventoryMaster))
         {
-            <div type="button" class="btn btn-danger" id="deleteButton" data-toggle="confirmation">
+            <div type="button" class="btn btn-danger" id="deleteButton" data-toggle="confirmation" data-placement="bottom">
                 <span class="glyphicon glyphicon-trash"></span> Delete
             </div>
         }
