--- a/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
@@ -56,7 +56,7 @@
         var firstSubCategoryId = Model.LumberSubCategories.Any() ? Model.LumberSubCategories.OrderBy(s => s.SortOrder).First().Id : Guid.Empty;
         <div class="panel panel-default">
             <div class="panel-heading">Sub Categories</div>
-            <div class="panel-body">
+            <div class="panel-body" style="height: 500px; overflow-y: scroll;">
                 <ul class="nav nav-tabs" data-tabs="tabs">
                     @{ string active;}
                     @foreach (var subCategory in Model.LumberSubCategories.OrderBy(s => s.SortOrder))
