--- a/Thermory.Web/Views/Account/ResetPassword.cshtml
+++ b/Thermory.Web/Views/Account/ResetPassword.cshtml
@@ -1,8 +1,10 @@
 ﻿@model Thermory.Web.Models.ForgotPasswordModel
 
-<h3>Reset password</h3>
-<br />
-@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new Dictionary<string, object> { { "id", "myForm" } }))
+<hgroup class="title">
+    <h1>Reset password</h1>
+</hgroup>
+
+@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new Dictionary<string, object> { { "id", "passwordResetForm" } }))
 {
     @Html.AntiForgeryToken()
     <input type="hidden" id="Token" value="@Model.Token"/>
@@ -11,16 +13,56 @@
         <legend>Change Password Form</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.NewPassword)
-                @Html.PasswordFor(m => m.NewPassword)
+                <label for="newPassword">New password</label>
+                <input id="newPassword" type="password" class="form-control">
             </li>
             <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
+                <label for="confirmPassword">Confirm password</label>
+                <input id="confirmPassword" type="password" class="form-control">
             </li>
         </ol>
-        <div type="button" class="btn btn-success" onclick="$('#myForm').submit();">
+        <div type="button" class="btn btn-success" onclick="resetPassword()">
             <span class="glyphicon glyphicon-ok"></span> Reset password
         </div>
     </fieldset>
 }
+<div id="passwordResetStatus"></div>
+
+<script language="javascript">
+    function resetPassword() {
+        var forgeryId = $("#forgeryToken").val();
+        $('#passwordResetForm').hide();
+        var newPassword = $('#newPassword').val();
+        var confirmPassword = $('#confirmPassword').val();
+
+        var data = { Token: '@Model.Token', NewPassword: newPassword, ConfirmPassword: confirmPassword };
+        var dataJson = JSON.stringify(data);
+
+        $('#passwordResetStatus').text = null;
+        $('#forgotPasswordForm').hide();
+        $('#passwordResetStatus').empty();
+
+        $.ajax({
+            type: 'POST',
+            url: '@Url.Action("ResetPassword", "Account")',
+            contentType: 'application/json',
+            dataType: 'json',
+            data: dataJson,
+            headers: {
+                'VerificationToken': forgeryId
+            },
+            success: function (data, status, request) {
+                if (data.status == "error") {
+                    $('#passwordResetForm').show();
+                    $('#passwordResetStatus').append(data.message);
+                    return;
+                }
+                $('#passwordResetStatus').append('Your password has been successfully changed. You may now log in with your new password.');
+            },
+            error: function (data, status, request) {
+                $('#passwordResetForm').show();
+                $('#passwordResetStatus').append('Error sending email');
+            }
+        });
+    }
+</script>
