--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -371,10 +371,8 @@
                                     <input type="text" id="@string.Format("package{0}Width", package.PackageNumber)" class="numeric" style="width: 100px;" value="@package.Width" />
                                 </div>
                             </div>
-                            <br class="packingSlipView" />
-                            <br />
                         }
-                        <div class="form-group packingSlipForm" style="display: none;">
+                        <div class="form-group packingSlipForm" style="display: none; margin-top: 10px;">
                             <div class="btn btn-success" onclick="updatePackingSlipDimensions();">
                                 <span class="glyphicon glyphicon-ok"></span> Save
                             </div>
